removed overflow hidden from html to fix double modal scroll bars

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,6 +9,9 @@ html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 62.5%;
   background: #eee;
+}
+
+body {
   overflow-x: hidden;
 }
 
